# wanted-pre-onboarding-backend-8

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
boards/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_wantedboard_writer.py  0003_alter_wantedboard_job_type.py  0004_rename_links_wantedboard_links_and_more.py  0005_alter_wantedboard_links.py  0006_alter_wantedboard_writer.py  0007_alter_wantedboard_job_type.py  0008_alter_wantedboard_file.py  0009_remove_wantedboard_file.py
common/: models.py
config/: settings.py  urls.py
users/: admin.py  manager.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_table.py
users/templates/: index.html
