[tool.poetry]
name = "wanted"
version = "0.1.0"
description = ""
authors = ["ssu-uky <id_suhyun@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-cors-headers = "^4.2.0"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
mysqlclient = "^2.2.0"
pyjwt = "^2.8.0"
pymysql = "^1.1.0"
requests = "^2.31.0"
sqlparse = "^0.4.4"
urllib3 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
